--- a/src/app/features/crm/components/required-documents/required-documents.component.html
+++ b/src/app/features/crm/components/required-documents/required-documents.component.html
@@ -12,17 +12,7 @@
           </div>
           <div class="card-body">
             <div class="row mb-3">
-              <div class="col-sm-4 col-4">
-                <select
-                  class="form-select"
-                  (change)="onSort($event, documentsData, 'description')"
-                >
-                  <option value="">Sorting Options</option>
-                  <option value="asc">Ascending</option>
-                  <option value="desc">Descending</option>
-                </select>
-              </div>
-              <div class="col-sm-4 col-4">
+              <div class="col-sm-6 col-6">
                 <input
                   type="text"
                   class="form-control"
@@ -32,7 +22,7 @@
                   (input)="filterDocuments($event)"
                 />
               </div>
-              <div class="col-sm-4 col-4">
+              <div class="col-sm-6 col-6">
                 <div class="float-end">
                   <span class="icon-circle"
                     ><i
@@ -66,9 +56,19 @@
                 >
                   <ng-template pTemplate="header">
                     <tr>
-                      <th class="head">Short Description</th>
-                      <th class="head">Description</th>
-                      <th class="head">Date Added</th>
+                      <th class="head" pSortableColumn="shortDescription">
+                        Short Description<p-sortIcon
+                          field="shortDescription"
+                        ></p-sortIcon>
+                      </th>
+                      <th class="head" pSortableColumn="description">
+                        Description<p-sortIcon field="description"></p-sortIcon>
+                      </th>
+                      <th class="head" pSortableColumn="dateSubmitted">
+                        Date Added<p-sortIcon
+                          field="dateSubmitted"
+                        ></p-sortIcon>
+                      </th>
                     </tr>
                   </ng-template>
                   <ng-template pTemplate="body" let-document>
@@ -102,17 +102,7 @@
           </div>
           <div class="card-body">
             <div class="row mb-3">
-              <div class="col-sm-4 col-4">
-                <select
-                  class="form-select"
-                  (change)="onSort($event, AssignDocumentData, 'accountType')"
-                >
-                  <option value="">Sorting Options</option>
-                  <option value="asc">Ascending</option>
-                  <option value="desc">Descending</option>
-                </select>
-              </div>
-              <div class="col-sm-4 col-4">
+              <div class="col-sm-6 col-6">
                 <input
                   type="text"
                   class="form-control"
@@ -122,7 +112,7 @@
                   (input)="filterAssignDocuments($event)"
                 />
               </div>
-              <div class="col-sm-4 col-4">
+              <div class="col-sm-6 col-6">
                 <div class="float-end">
                   <span class="icon-circle"
                     ><i
@@ -156,9 +146,17 @@
                 >
                   <ng-template pTemplate="header">
                     <tr>
-                      <th class="head">Account</th>
-                      <th class="head">Account Type</th>
-                      <th class="head">Mandatory</th>
+                      <th class="head" pSortableColumn="accountType">
+                        Account<p-sortIcon field="accountType"></p-sortIcon>
+                      </th>
+                      <th class="head" pSortableColumn="accountSubType">
+                        Account Type<p-sortIcon
+                          field="accountSubType"
+                        ></p-sortIcon>
+                      </th>
+                      <th class="head" pSortableColumn="isMandatory">
+                        Mandatory<p-sortIcon field="isMandatory"></p-sortIcon>
+                      </th>
                     </tr>
                   </ng-template>
                   <ng-template pTemplate="body" let-account>
